<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <Button
        android:id="@+id/bt1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="5dp"
        android:background="#BF57FF"
        android:text="@string/button1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bt2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="24dp"
        android:background="#F84646"
        android:text="@string/button2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt1"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="5dp"
        android:background="#33ED3D"
        android:text="@string/button3"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:background="#ECD60C"
        android:text="@string/button4"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt3"
        app:layout_constraintVertical_bias="0.031" />
</androidx.constraintlayout.widget.ConstraintLayout>